# cuda-tests

./: Makefile  README.md  pi-simulation.cu  scalaire-test.cu
libtorch_projects/: README.md
libtorch_projects/SAGA_nnet/: README.md  SAGA_nnet.hpp
libtorch_projects/SVRG_nnet/: README.md  SGD.hpp  mnist_SGD.cpp  sin_SVRG.cpp
libtorch_projects/nnet_from_scratch/: nnet_from_scratch.cpp  nnet_from_scratch.hpp
libtorch_projects/tutorials/: .README.md.swo  CMakeLists.txt  GPU_CPU_example.cpp  autograd_example.cpp  sandbox.cpp  tensor_example.cpp
mshadow-sandbox/: Makefile  README.md  defop.cu  lazy_exp.cu  simple_allocator.cu  syntax.cu
mshadow/guide/: Makefile
mshadow/guide/neuralnet/: Makefile  config.mk  nnet.cu
mshadow/make/: mshadow.mk
mshadow/mshadow/: tensor_container.h
neuralnet-MNIST/: Makefile  neuralnet.hpp  nnet_v1.cu  util.h
pi-simulation/: Makefile  README.md  pi-simulation.cu
projects_mshadow/mshadow-sandbox/: README.md  defop.cu  syntax.cu
projects_mshadow/mshadow/guide/: basic.cpp
projects_mshadow/mshadow/guide/neuralnet/: nnet.cu
projects_mshadow/neuralnet-MNIST/: README.md  neuralnet.hpp  nnet_v1.cu
projects_mshadow/pi-simulation/: pi-simulation.cu
projects_pytorch/: README.md
projects_pytorch/SAGA_nnet/: CMakeLists.txt  README.md  SAGA_nnet.cpp  SAGA_nnet.hpp
projects_pytorch/SVRG_nnet/: README.md  SGD.cpp  SGD.hpp  SVRG.cpp  SVRG.hpp  SVRG_nnet.cpp  SVRG_nnet.hpp  SVRG_only.cpp  SVRG_only.hpp  function_gen.hpp  mnist_SVRG.cpp  sin_SGD.cpp
projects_pytorch/custom_nnet/: CMakeLists.txt  custom_nnet.cpp  custom_nnet.hpp
projects_pytorch/learning_rate_experiment/: SGD_decay.hpp  learning_rate.cpp
projects_pytorch/manual_vs_autograd/: nnet_from_scratch_V2.cpp  nnet_from_scratch_V2.hpp
projects_pytorch/nnet_from_scratch/: CMakeLists.txt  README.md  nnet_from_scratch.cpp  nnet_from_scratch.hpp
projects_pytorch/tutorials/: CMakeLists.txt  GPU_CPU_example.cpp  README.md  autograd_example.cpp  first_example.cpp  nnet.cpp  nnet_from_scratch.cpp  tensor_example.cpp
pytorch_projects/Convolutional neural networks/: SVRG_with_batch_norm.ipynb  Simple_CNN.ipynb
pytorch_projects/Convolutional neural networks/.ipynb_checkpoints/: Simple_CNN-checkpoint.ipynb
pytorch_projects/data/MNIST/: predictions.csv
pytorch_projects/tutorials/: nnet_from_scratch.ipynb  nnet_with_pytorch.ipynb
pytorch_projects/tutorials/.ipynb_checkpoints/: nnet_from_scratch-checkpoint.ipynb
