cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(tutorials)

find_package(Torch REQUIRED)
add_executable(tensor_example tensor_example.cpp)
add_executable(autograd_example autograd_example.cpp)
target_link_libraries(tensor_example "${TORCH_LIBRARIES}")
target_link_libraries(autograd_example "${TORCH_LIBRARIES}")
set_property(TARGET tensor_example PROPERTY CXX_STANDARD 11)
set_property(TARGET autograd_example PROPERTY CXX_STANDARD 11)
